--- a/src/main/resources/static/templates/login.html
+++ b/src/main/resources/static/templates/login.html
@@ -21,6 +21,9 @@
                 <button type="submit" class="btn btn-success w-100">Login</button>
             </form>
             <div id="loginMessage" class="mt-3 text-center"></div>
+            <div class="mt-3 text-center">
+    <p>you dont have an account? <a href="/register.html" class="text-primary">Registers here</a></p>
+</div>
         </div>
     </div>
 
